[FIX] getMessage from Elasticsearch
