# rest-app-openapi/src/main/java/com/disposableemail/dao/entity/MessageEntity.java
@@ -8,7 +8,6 @@ import org.springframework.data.elasticsearch.annotations.Document;
 import org.springframework.data.elasticsearch.annotations.Field;
 import org.springframework.data.elasticsearch.annotations.FieldType;
 
-import java.time.LocalDateTime;
 import java.time.OffsetDateTime;
 import java.util.List;
 
@@ -23,7 +22,7 @@ public class MessageEntity {
 
     private String messageId;
     private String accountId;
-    private String msgid;
+    private String mimeMessageID;
     private List<Address> from;
     private List<Address> to;
     private List<Address> cc;
@@ -32,11 +31,6 @@ public class MessageEntity {
     private Boolean isUnread;
     private Boolean isFlagged;
     private Boolean isDeleted;
-    private List<String> verifications;
-    private Boolean retention;
-
-    private LocalDateTime retentionDate;
-
     private String textBody;
     private List<String> htmlBody;
     private Boolean hasAttachment;
@@ -46,6 +40,4 @@ public class MessageEntity {
 
     @Field(type = FieldType.Date, format = DateFormat.date, pattern = "yyyy-MM-dd'T'HH:mm:ssZ")
     private OffsetDateTime date;
-
-    private LocalDateTime updatedAt;
 }
